# taxspine-orchestrator

./: .dockerignore  .env.example  .gitignore  AUDIT_PROMPT.md  AUDIT_REPORT.md  Dockerfile  Dockerfile.local  Dockerfile.local.dockerignore  HANDOFF.md  LICENSE  PRIVACY.md  README.md  REMEDIATION_PROGRESS.md  docker-compose.synology.yml  docker-compose.yml  entrypoint.sh  main.py  prices.csv  pyproject.toml  requirements-lock.txt  test-full-stack.py  test-orchestrator.py  ui.html
.claude/: settings.json
.claude/hooks/: pre_push_checklist.md
.githooks/: pre-push
.github/workflows/: docker.yml
docs/: CI_BUILD_GOTCHAS.md  DPA_TEMPLATE.md  OPERATIONS.md
scripts/: build-local.ps1  deploy.ps1  generate-nok-prices-2025.py  start.ps1  test-price-table-job.py
taxspine_orchestrator/: __init__.py  config.py  dedup.py  lots.py  main.py  models.py  prices.py  review.py  services.py  storage.py
tests/: conftest.py  test_alerts.py  test_alerts_diagnostics.py  test_api_hardening.py  test_background_worker.py  test_batch12.py  test_batch13.py  test_batch14.py  test_batch15.py  test_batch16.py  test_batch17.py  test_batch18.py  test_batch19.py  test_batch20.py  test_batch21.py  test_batch22.py  test_batch23.py  test_batch24.py  test_batch25.py  test_batch26.py  test_batch27.py  test_batch28.py  test_batch29.py  test_batch30.py  test_cli_integration.py  test_consolidation.py  test_csv_uploads.py  test_dashboard_phase3.py  test_dedup_api.py  test_dedup_store_orchestrator.py  test_delete_job.py  test_diagnostics.py  test_healthcheck.py  test_high_findings.py  test_holdings_prices.py  test_infra_hardening.py  test_job_execution.py  test_job_execution_csv.py  test_jobs_api.py  test_jobs_filters_and_files.py  (+21 more)
ui/: index.html
