[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxspine-orchestrator"
version = "0.1.0"
description = "Internal orchestration API for tax-job creation and pipeline coordination."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",           # required by fastapi.testclient
    # INFRA-20: ruff for lint in CI (python -m ruff check .)
    "ruff>=0.4",
]

# INFRA-20: ruff configuration — permissive baseline so existing code passes.
# Extend the selected rules as the codebase matures.
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — handled by line-length above
    "F401",   # unused imports — some are re-exports
    "E402",   # module level import not at top — services.py deferred imports
]

[tool.setuptools.packages.find]
include = ["taxspine_orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
